universities/uzh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rer-uzh-ingress
  namespace: rer-uzh
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: rer.uzh.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
    - host: api.rer.uzh.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
